--- a/DaemonCharacter/DaemonCharacter/bin/DaemonCharacter.dll.config
+++ b/DaemonCharacter/DaemonCharacter/bin/DaemonCharacter.dll.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-DaemonCharacter-20160328223847;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-DaemonCharacter-20160328223847.mdf"
       providerName="System.Data.SqlClient" />
-    <add name="DaemonCharacterContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=DaemonCharacterContext-20160328230930; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|DaemonCharacterContext-20160328230930.mdf"
+    <add name="DaemonCharacter" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=DaemonCharacter; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|DaemonCharacter.mdf"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
