--- a/DaemonCharacter/DaemonCharacter/DaemonCharacter.csproj
+++ b/DaemonCharacter/DaemonCharacter/DaemonCharacter.csproj
@@ -184,6 +184,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AttributeController.cs" />
     <Compile Include="Controllers\AttributeTypeController.cs" />
+    <Compile Include="Controllers\CharacterAttributeController.cs" />
     <Compile Include="Controllers\CharacterController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
@@ -197,6 +198,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\DynamicForm.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -254,6 +256,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
+    <Content Include="Scripts\DynamicForm.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
@@ -319,14 +322,19 @@
     <Content Include="Views\Attribute\Create.cshtml" />
     <Content Include="Views\Attribute\Edit.cshtml" />
     <Content Include="Views\Attribute\Delete.cshtml" />
+    <Content Include="Views\Shared\_LayoutPartial.cshtml" />
     <Content Include="Views\Character\Index.cshtml" />
     <Content Include="Views\Character\Details.cshtml" />
-    <Content Include="Views\Character\Create.cshtml" />
     <Content Include="Views\Character\Edit.cshtml" />
     <Content Include="Views\Character\Delete.cshtml" />
-    <Content Include="Views\Attribute\_ListAttributeType.cshtml" />
-    <Content Include="Views\AttributeType\_List.cshtml" />
-    <Content Include="Views\Shared\_LayoutPartial.cshtml" />
+    <Content Include="Views\CharacterAttribute\Index.cshtml" />
+    <Content Include="Views\CharacterAttribute\Details.cshtml" />
+    <Content Include="Views\CharacterAttribute\_Create.cshtml" />
+    <Content Include="Views\CharacterAttribute\Edit.cshtml" />
+    <Content Include="Views\CharacterAttribute\Delete.cshtml" />
+    <Content Include="Views\Attribute\ListNonCharacter.cshtml" />
+    <Content Include="Views\Attribute\ListAttributesFromNewCharacter.cshtml" />
+    <Content Include="Views\Character\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
