--- a/DaemonCharacter/DaemonCharacter/bin/DaemonCharacter.dll.config
+++ b/DaemonCharacter/DaemonCharacter/bin/DaemonCharacter.dll.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-DaemonCharacter-20160328223847;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-DaemonCharacter-20160328223847.mdf"
       providerName="System.Data.SqlClient" />-->
-    <add name="DaemonCharacter" connectionString="Data Source=SALES-PC; Initial Catalog=DaemonCharacter; Integrated Security=True;"
+    <add name="DaemonCharacter" connectionString="Data Source=localhost; Initial Catalog=DaemonCharacter; Integrated Security=True;"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
