--- a/DaemonCharacter/DaemonCharacter/DaemonCharacter.csproj
+++ b/DaemonCharacter/DaemonCharacter/DaemonCharacter.csproj
@@ -331,7 +331,8 @@
     <Content Include="Views\CharacterAttribute\ListNonCharacter.cshtml" />
     <Content Include="Views\Character\Create.cshtml" />
     <Content Include="Views\Attribute\ListBonus.cshtml" />
-    <Content Include="Views\CharacterAttribute\ListCharacter.cshtml" />
+    <Content Include="Views\CharacterAttribute\ListCharacterWithBonus.cshtml" />
+    <Content Include="Views\CharacterAttribute\ListCharacterWithNoBonus.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
