--- a/DaemonCharacter/DaemonCharacter/DaemonCharacter.csproj
+++ b/DaemonCharacter/DaemonCharacter/DaemonCharacter.csproj
@@ -188,6 +188,7 @@
     <Compile Include="Controllers\CampaignController.cs" />
     <Compile Include="Controllers\CharacterAttributeController.cs" />
     <Compile Include="Controllers\CharacterController.cs" />
+    <Compile Include="Controllers\GenderController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\RaceController.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
@@ -335,11 +336,11 @@
     <Content Include="Views\Attribute\Delete.cshtml" />
     <Content Include="Views\Shared\_LayoutPartial.cshtml" />
     <Content Include="Views\Character\Index.cshtml" />
-    <Content Include="Views\Character\Details.cshtml" />
+    <Content Include="Views\Character\PlayerDetails.cshtml" />
     <Content Include="Views\Character\Edit.cshtml" />
     <Content Include="Views\Character\Delete.cshtml" />
     <Content Include="Views\CharacterAttribute\ListNonCharacter.cshtml" />
-    <Content Include="Views\Character\Create.cshtml" />
+    <Content Include="Views\Character\CreatePlayer.cshtml" />
     <Content Include="Views\Attribute\ListBonus.cshtml" />
     <Content Include="Views\CharacterAttribute\ListCharacterWithBonus.cshtml" />
     <Content Include="Views\CharacterAttribute\ListCharacterWithNoBonus.cshtml" />
@@ -354,6 +355,13 @@
     <Content Include="Views\Race\Create.cshtml" />
     <Content Include="Views\Race\Edit.cshtml" />
     <Content Include="Views\Race\Delete.cshtml" />
+    <Content Include="Views\Character\CreateNPC.cshtml" />
+    <Content Include="Views\Gender\Index.cshtml" />
+    <Content Include="Views\Gender\Details.cshtml" />
+    <Content Include="Views\Gender\Create.cshtml" />
+    <Content Include="Views\Gender\Edit.cshtml" />
+    <Content Include="Views\Gender\Delete.cshtml" />
+    <Content Include="Views\Character\NonPlayerDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
