--- a/DaemonCharacter/DaemonCharacter/Web.config
+++ b/DaemonCharacter/DaemonCharacter/Web.config
@@ -9,10 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-DaemonCharacter-20160328223847;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-DaemonCharacter-20160328223847.mdf"
-      providerName="System.Data.SqlClient" />-->
-    <add name="DaemonCharacter" connectionString="Data Source=localhost; Initial Catalog=DaemonCharacter; Integrated Security=True;"
+    <add name="DaemonCharacter" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-DaemonCharacter-20160328223847;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-DaemonCharacter-20160328223847.mdf"
       providerName="System.Data.SqlClient" />
+    <!--<add name="DaemonCharacter" connectionString="Data Source=localhost; Initial Catalog=DaemonCharacter; Integrated Security=True;"
+      providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
