Playing with front-end

--- a/DaemonCharacter/DaemonCharacter/DaemonCharacter.csproj
+++ b/DaemonCharacter/DaemonCharacter/DaemonCharacter.csproj
@@ -203,8 +203,16 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\1-col-portfolio.css" />
+    <Content Include="Content\bootstrap.css" />
+    <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\DynamicForm.css" />
+    <Content Include="Content\jquery.smartmenus.bootstrap.css" />
     <Content Include="Content\Menu.css" />
+    <Content Include="Content\owl\owl.carousel.css" />
+    <Content Include="Content\owl\owl.carousel.js" />
+    <Content Include="Content\owl\owl.theme.css" />
+    <Content Include="Content\owl\owl.transitions.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -260,18 +268,59 @@
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="favicon.ico" />
+    <Content Include="fonts\font-awesome.min.css" />
+    <Content Include="fonts\fontawesome-webfont.svg" />
+    <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="fonts\fontawesome-webfont.eot" />
+    <Content Include="fonts\fontawesome-webfont.ttf" />
+    <Content Include="fonts\fontawesome-webfont.woff" />
+    <Content Include="fonts\fontawesome-webfont.woff2" />
+    <Content Include="fonts\FontAwesome.otf" />
+    <Content Include="fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
+    <Content Include="Images\12.jpg" />
+    <Content Include="Images\13.jpg" />
+    <Content Include="Images\14.jpg" />
+    <Content Include="Images\15.jpg" />
+    <Content Include="Images\2.png" />
+    <Content Include="Images\22.jpg" />
+    <Content Include="Images\700x300.jpg" />
+    <Content Include="Images\agsquare_%402X.png" />
+    <Content Include="Images\banner.jpg" />
     <Content Include="Images\dragon_2.jpg" />
     <Content Include="Images\icon_minus.png" />
     <Content Include="Images\icon_plus.png" />
+    <Content Include="Images\item01.jpg" />
+    <Content Include="Images\item02.jpg" />
+    <Content Include="Images\item03.jpg" />
+    <Content Include="Images\logo.png" />
+    <Content Include="Images\portfolio\item01.jpg" />
+    <Content Include="Images\portfolio\item02.jpg" />
+    <Content Include="Images\portfolio\item03.jpg" />
+    <Content Include="Images\portfolio\item04.jpg" />
+    <Content Include="Images\portfolio\item05.jpg" />
+    <Content Include="Images\portfolio\item06.jpg" />
+    <Content Include="Images\products\1.jpg" />
+    <Content Include="Images\products\2.jpg" />
+    <Content Include="Images\products\3.jpg" />
     <Content Include="Images\texture.png" />
+    <Content Include="Images\triangular_%402X.png" />
+    <Content Include="Scripts\bootstrap.js" />
+    <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\CharacterForms.js" />
+    <Content Include="Scripts\contact.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery-ui-1.8.24.js" />
     <Content Include="Scripts\jquery-ui-1.8.24.min.js" />
+    <Content Include="Scripts\jquery.js" />
+    <Content Include="Scripts\jquery.smartmenus.bootstrap.js" />
+    <Content Include="Scripts\jquery.smartmenus.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
@@ -282,6 +331,8 @@
     <Content Include="Scripts\knockout-2.2.0.js" />
     <Content Include="Scripts\Menu.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\tutorial.js" />
+    <Content Include="Scripts\wow.min.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
