--- a/DaemonCharacter/DaemonCharacter/DaemonCharacter.csproj
+++ b/DaemonCharacter/DaemonCharacter/DaemonCharacter.csproj
@@ -184,12 +184,12 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AttributeController.cs" />
-    <Compile Include="Controllers\AttributeTypeController.cs" />
     <Compile Include="Controllers\CampaignController.cs" />
     <Compile Include="Controllers\CharacterAttributeController.cs" />
     <Compile Include="Controllers\CharacterController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\RaceController.cs" />
+    <Compile Include="Controllers\ItemAttributeController.cs" />
+    <Compile Include="Controllers\ItemController.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -201,6 +201,7 @@
     <Compile Include="Models\DaemonCharacterContext.cs" />
     <Compile Include="Models\ItemModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\Enums.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\1-col-portfolio.css" />
@@ -313,6 +314,7 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\CharacterForms.js" />
     <Content Include="Scripts\contact.js" />
+    <Content Include="Scripts\ItemForm.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
@@ -374,11 +376,6 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
-    <Content Include="Views\AttributeType\Index.cshtml" />
-    <Content Include="Views\AttributeType\Details.cshtml" />
-    <Content Include="Views\AttributeType\Create.cshtml" />
-    <Content Include="Views\AttributeType\Edit.cshtml" />
-    <Content Include="Views\AttributeType\Delete.cshtml" />
     <Content Include="Views\Attribute\Index.cshtml" />
     <Content Include="Views\Attribute\Details.cshtml" />
     <Content Include="Views\Attribute\Create.cshtml" />
@@ -400,13 +397,15 @@
     <Content Include="Views\Campaign\Create.cshtml" />
     <Content Include="Views\Campaign\Edit.cshtml" />
     <Content Include="Views\Campaign\Delete.cshtml" />
-    <Content Include="Views\Race\Index.cshtml" />
-    <Content Include="Views\Race\Details.cshtml" />
-    <Content Include="Views\Race\Create.cshtml" />
-    <Content Include="Views\Race\Edit.cshtml" />
-    <Content Include="Views\Race\Delete.cshtml" />
     <Content Include="Views\Character\CreateNPC.cshtml" />
     <Content Include="Views\Character\NonPlayerDetails.cshtml" />
+    <Content Include="Views\Item\Index.cshtml" />
+    <Content Include="Views\Item\Details.cshtml" />
+    <Content Include="Views\Item\Create.cshtml" />
+    <Content Include="Views\Item\Edit.cshtml" />
+    <Content Include="Views\Item\Delete.cshtml" />
+    <Content Include="Views\ItemAttribute\Create.cshtml" />
+    <Content Include="Views\ItemAttribute\ListItemAttribute.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
