--- a/DaemonCharacter/DaemonCharacter/DaemonCharacter.csproj
+++ b/DaemonCharacter/DaemonCharacter/DaemonCharacter.csproj
@@ -201,6 +201,7 @@
     <Compile Include="Models\DaemonCharacterContext.cs" />
     <Compile Include="Models\ItemModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\Auth.cs" />
     <Compile Include="Utils\Enums.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -406,6 +407,7 @@
     <Content Include="Views\Item\Delete.cshtml" />
     <Content Include="Views\ItemAttribute\Create.cshtml" />
     <Content Include="Views\ItemAttribute\ListItemAttribute.cshtml" />
+    <Content Include="Views\Campaign\ListAvailableCampaigns.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
