--- a/DaemonCharacter/DaemonCharacter/DaemonCharacter.csproj
+++ b/DaemonCharacter/DaemonCharacter/DaemonCharacter.csproj
@@ -190,6 +190,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ItemAttributeController.cs" />
     <Compile Include="Controllers\ItemController.cs" />
+    <Compile Include="Controllers\SessionController.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -200,11 +201,11 @@
     <Compile Include="Models\CharacterModel.cs" />
     <Compile Include="Models\DaemonCharacterContext.cs" />
     <Compile Include="Models\ItemModel.cs" />
+    <Compile Include="Models\PlayerModel.cs" />
     <Compile Include="Models\PlayerSessionModel.cs" />
     <Compile Include="Models\SessionModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\Auth.cs" />
-    <Compile Include="Utils\Enums.cs" />
+    <Compile Include="Models\Enums.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\1-col-portfolio.css" />
@@ -315,6 +316,7 @@
     <Content Include="Images\triangular_%402X.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\Campaign.js" />
     <Content Include="Scripts\CharacterForms.js" />
     <Content Include="Scripts\contact.js" />
     <Content Include="Scripts\ItemForm.js" />
@@ -410,6 +412,12 @@
     <Content Include="Views\ItemAttribute\Create.cshtml" />
     <Content Include="Views\ItemAttribute\ListItemAttribute.cshtml" />
     <Content Include="Views\Campaign\ListAvailableCampaigns.cshtml" />
+    <Content Include="Views\Session\Index.cshtml" />
+    <Content Include="Views\Session\Details.cshtml" />
+    <Content Include="Views\Session\Create.cshtml" />
+    <Content Include="Views\Session\Edit.cshtml" />
+    <Content Include="Views\Session\Delete.cshtml" />
+    <Content Include="Views\Session\_ListSessions.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
