--- a/DaemonCharacter/DaemonCharacter.UI.MVC/bin/DaemonCharacter.UI.MVC.dll.config
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/bin/DaemonCharacter.UI.MVC.dll.config
@@ -9,7 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-DaemonCharacter.UI.MVC-20160701082643.mdf;Initial Catalog=aspnet-DaemonCharacter.UI.MVC-20160701082643;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\DaemonCharacter.mdf;Initial Catalog=DaemonCharacter;Integrated Security=True" 
+         providerName="System.Data.SqlClient" />
+  <add name="Identity" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\Identity.mdf;Initial Catalog=Identity;Integrated Security=True"
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
