Player Form completed

--- a/DaemonCharacter/DaemonCharacter.Application/DaemonCharacter.Application.csproj
+++ b/DaemonCharacter/DaemonCharacter.Application/DaemonCharacter.Application.csproj
@@ -59,6 +59,8 @@
     <Compile Include="AppService\PlayerItemAppService.cs" />
     <Compile Include="AutoMapper\AutoMapperConfig.cs" />
     <Compile Include="AutoMapper\DomainToViewModelMappingProfile.cs" />
+    <Compile Include="AutoMapper\SelectedCharacterAttributeViewModelToCharacterAttribute.cs" />
+    <Compile Include="AutoMapper\SelectedPlayerItemViewModelToPlayerItem.cs" />
     <Compile Include="AutoMapper\ViewModelToDomainMappingProfile.cs" />
     <Compile Include="Interfaces\IAttributeAppService.cs" />
     <Compile Include="Interfaces\ICampaignAppService.cs" />
