--- a/DaemonCharacter/DaemonCharacter.UI.MVC/packages.config
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/packages.config
@@ -5,6 +5,7 @@
   <package id="bootstrap" version="3.3.7" targetFramework="net452" />
   <package id="DomainValidation" version="1.0.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="Gulp.js" version="1.0.2" targetFramework="net452" />
   <package id="jQuery" version="3.1.0" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.15.1" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="1.2.3" targetFramework="net452" />
@@ -38,6 +39,7 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Node.js" version="5.3.0" targetFramework="net452" />
+  <package id="Npm.js" version="1.3.15.7" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="SimpleInjector" version="3.2.0" targetFramework="net452" />
